# DjangoWithTest

./: .dockerignore  .flake8  Dockerfile  djangoStudy.md  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: django-cd.yml  django-ci.yml
giveRole/: backend_api.md  frontend_ui.md  reverse_prd.md  static_analysis.md  tcRole.md
prd/: pybo_API_tc.md  pybo_reverse_prd.md  pybo_tc.md
projects/: .gitignore  db.sqlite3
projects/config/: settings.py  urls.py
projects/mysite/: pyproject.toml
projects/pybo/: admin.py  models.py  tests.py  views.py
projects/pybo/migrations/: 0001_initial.py
projects/templates/pybo/: question_detail.html
